// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> should match snapshot when toggled 1`] = `
<button
  aria-disabled="false"
  aria-label="toggle on"
  class="appearance cursorPointer button position_relative pill_mobile_base backgroundColours_green600_base root_base root_base block colours_neutral_base sizes_5_base toggled_base"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base pill_mobile_base backgroundColours_white_base handle_default_base appearance cursorPointer button root_base block colours_white_base handle_transition_base"
  />
</button>
`;

exports[`<Switch /> should match snapshot when toggled and disabled 1`] = `
<button
  aria-disabled="true"
  aria-label="toggle on"
  class="appearance cursorPointer button position_relative pill_mobile_base backgroundColours_green600_base root_base root_base block colours_neutral_base sizes_5_base toggled_base disabled_default_base disabled_toggled_base"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base pill_mobile_base backgroundColours_white_base handle_default_base appearance cursorPointer button root_base block colours_white_base handle_transition_base"
  />
</button>
`;

exports[`<Switch /> should match snapshot when un-toggled 1`] = `
<button
  aria-disabled="false"
  aria-label="toggle off"
  class="appearance cursorPointer button position_relative pill_mobile_base backgroundColours_gray100_base root_base root_base block colours_neutral_base sizes_5_base"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base pill_mobile_base backgroundColours_white_base handle_default_base appearance cursorPointer button root_base block colours_white_base"
  />
</button>
`;

exports[`<Switch /> should match snapshot when un-toggled and disabled 1`] = `
<button
  aria-disabled="true"
  aria-label="toggle off"
  class="appearance cursorPointer button position_relative pill_mobile_base backgroundColours_gray100_base root_base root_base block colours_neutral_base sizes_5_base disabled_default_base"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base pill_mobile_base backgroundColours_white_base handle_default_base appearance cursorPointer button root_base block colours_white_base"
  />
</button>
`;

exports[`<Switch /> should match snapshot without props 1`] = `
<button
  aria-disabled="false"
  aria-label="toggle off"
  class="appearance cursorPointer button position_relative pill_mobile_base backgroundColours_gray100_base root_base root_base block colours_neutral_base sizes_5_base"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base position_absolute border_style border_colour_top_gray_base border_colour_right_gray_base border_colour_bottom_gray_base border_colour_left_gray_base 1_mobile_base 1_mobile_base 1_mobile_base 1_mobile_base 2_mobile_base pill_mobile_base backgroundColours_white_base handle_default_base appearance cursorPointer button root_base block colours_white_base"
  />
</button>
`;
